# src/main/java/com/jibi/controller/HealthController.java
@@ -2,6 +2,9 @@ package com.jibi.controller;
 
 import io.swagger.annotations.Api;
 import io.swagger.annotations.ApiOperation;
+import io.swagger.annotations.ApiResponse;
+import io.swagger.annotations.ApiResponses;
+import org.springframework.http.MediaType;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
@@ -13,7 +16,9 @@ import java.util.Date;
 public class HealthController {
 
     @ApiOperation(value = "Health api", response = String.class)
-    @RequestMapping(value = "/health", method = RequestMethod.GET)
+    @ApiResponses(value = {@ApiResponse(code = 200, message = "Ok"),
+            @ApiResponse(code = 500, message = "Internal server error")})
+    @RequestMapping(value = "/health", method = RequestMethod.GET, produces = {MediaType.TEXT_PLAIN_VALUE})
     public String health() {
         return "Server time " + new Date().toString();
     }
