# src/main/java/com/jibi/controller/StatusCodesController.java
@@ -1,7 +1,6 @@
 package com.jibi.controller;
 
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
+import io.swagger.annotations.*;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.PathVariable;
@@ -9,6 +8,7 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RequestMethod;
 import org.springframework.web.bind.annotation.RestController;
 
+import javax.ws.rs.Produces;
 import java.util.Arrays;
 import java.util.Date;
 import java.util.List;
@@ -19,16 +19,22 @@ import java.util.stream.Collectors;
 @Api(value = "Status codes Api")
 public class StatusCodesController {
 
-    @ApiOperation(value = "Status code api", response = Void.class)
+    @ApiOperation(value = "Status code api", notes = "Api to respond with the status code in uri", response = Void.class)
+    @ApiResponses(value = {@ApiResponse(code = 200, message = "Ok"),
+            @ApiResponse(code = 400, message = "Bad request"),
+            @ApiResponse(code = 500, message = "Internal server error")})
     @RequestMapping(value = "/status/{code}", method = RequestMethod.GET)
-    public ResponseEntity<Void> statusCode(@PathVariable("code") Integer code) {
+    public ResponseEntity<Void> statusCode(@ApiParam(value = "Status code of response", required = true) @PathVariable("code") Integer code) {
         HttpStatus httpStatus = HttpStatus.valueOf(code);
         return new ResponseEntity<Void>(httpStatus);
     }
 
     @ApiOperation(value = "Status random code api", response = Void.class)
+    @ApiResponses(value = {@ApiResponse(code = 200, message = "Ok"),
+            @ApiResponse(code = 400, message = "Bad request"),
+            @ApiResponse(code = 500, message = "Internal server error")})
     @RequestMapping(value = "/status/random/{codes}", method = RequestMethod.GET)
-    public ResponseEntity<Void> statusRandomCodes(@PathVariable("codes") String strCodes) {
+    public ResponseEntity<Void> statusRandomCodes(@ApiParam(value = "Comma separated status codes", required = true) @PathVariable("codes") String strCodes) {
         String[] arrayCodes = strCodes.split(",");
         List<Integer> codes = Arrays.stream(arrayCodes).map(str -> Integer.parseInt(str)).collect(Collectors.toList());
         Random random = new Random(new Date().getTime());
